--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "c.p.b.-security",
   "version": "1.0.0",
   "description": "",
-  "source": "src/index.html",
+  "homepage": "https://soan1488.github.io/C.P.B.-SECURITY/",
   "scripts": {
-    "dev": "parcel",
-    "build": "parcel build"
+    "dev": "parcel src/*.html",
+    "build": "parcel build src/*.html --public-url /C.P.B.-SECURITY/"
   },
   "repository": {
     "type": "git",
