--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "homepage": "https://soan1488.github.io/C.P.B.-SECURITY/",
   "source": "src/index.html",
-    "scripts": {
+  "scripts": {
     "dev": "parcel",
     "build": "parcel build --public-url /C.P.B.-SECURITY/"
   },
@@ -23,5 +23,8 @@
     "parcel-reporter-clean-dist": "^1.0.4",
     "posthtml-include": "^1.7.4"
   },
-  "browserslist": "> 0.5%, last 2 versions, not dead"
+  "browserslist": "> 0.5%, last 2 versions, not dead",
+  "dependencies": {
+    "swiper": "^8.4.4"
+  }
 }
